# maxchernoff.ca

./: .gitattributes  .gitignore  .gitmodules  README.md  install-rules.toml  pyproject.toml  setup.md  unit-status.conf  variables.toml
builder/.config/: build-container.toml  prometheus-podman-exporter
builder/.config/user-tmpfiles.d/: cache.conf
builder/containers/: build-container.toml
builder/containers/bootc-builder/: Containerfile
builder/containers/caddy/: Containerfile
builder/containers/caddy-ech/: Containerfile
builder/containers/fedora/: Containerfile  container-build.sh  fedora.yaml
builder/containers/fedora-bootc/: Containerfile  build.sh
builder/containers/fedora-bootc-base/: Containerfile
builder/containers/fedora-iot/: Containerfile  _copr:copr.fedorainfracloud.org:gucci-on-fleek:kernel.repo  base.containerfile  build.sh  container-build.sh  containers.conf  fedora-iot.yaml  fedora-updates-archive.repo  fedora-updates-testing.repo  fedora-updates.repo  fedora.repo  final.containerfile  image-minimize.txt  local-required-fallbacks.cil
builder/containers/flask/: Containerfile  container-build.sh
builder/containers/knot-exporter/: Containerfile  container-build.sh
builder/containers/tex/: .gitignore  Containerfile  context-cache.tex  latex-cache.tex  package-install.sh  tex-cache.sh
builder/containers/tex-gcc/: Containerfile
builder/containers/tex-wine/: Containerfile
builder/containers/victoria/: pull-and-copy.sh
builder/containers/victoria-logs/: Containerfile
builder/containers/victoria-metrics/: Containerfile  pull-and-copy.sh
builder/containers/viewvc/: .gitignore  Containerfile  cgi.py  container-build.sh  start.py
builder/minimal/: Containerfile  container-build.sh
containers/minimal-build/: Containerfile  container-build.sh
etc/: fstab  hosts  localtime  rpm-ostreed.conf
etc/audit/rules.d/: 10-base-config.rules  11-loginuid.rules  20-dont-audit.rules  20-local-ignore-general.rules  20-local-ignore-ssh.rules  21-no32bit.rules  30-ospp-v42.rules  40-local-bpf.rules  42-injection.rules  43-module-load.rules
etc/bees/: beesd.conf
etc/common/: image-minimize.conf
etc/common/containers/: policy.json  (+1 more)
etc/containers/: containers.conf  policy.json  storage.conf
etc/firewalld/: firewalld.conf
etc/pam.d/: password-auth
etc/security/: limits.conf
etc/selinux/: local-policy.cil
etc/sudoers.d/: selinux
etc/sysctl.d/: 98-local-network.conf  98-local-overrides.conf
etc/systemd/: journal-upload.conf  system.conf  zram-generator.conf
etc/sysusers.d/: common-users.conf
etc/tmpfiles.d/: linger.conf
max/: .tmux.conf
max/.ssh/: authorized_keys
scripts/: _web-status  console-colors.sh  email-failure  git-encrypt  notify-all  web-force-push  web-install  web-local  web-local-api  web-pull  web-restart  web-start  web-status  web-symlinks  web-uptime
scripts/process_files/: acl.py  config.py  fs_ops.py  selinux.py
tex/services/: update-texlive.service  update-texlive.timer
web/: Caddyfile
web-config/: Caddyfile
web-containers/systemd/: caddy.container  overleaf-mongo.container  overleaf-overleaf.container  overleaf.network
web-static/: index.html
web/.config/: prometheus-podman-exporter
web/caddy/: update-context-wiki.sh
web/config/: Caddyfile  base.caddyfile  local.caddyfile  server.caddyfile
web/containers/: containers.conf
web/dnscontrol/: .gitignore  creds.json  dnsconfig.js
web/flask/: Containerfile  app.py
web/goaccess/: .gitignore
web/maddy/: maddy.conf
web/services/: network-ready.service  update-analytics-graphs.service  update-analytics-requests.service  update-analytics.service  update-analytics.target  update-analytics.timer
web/source/: style.css
web/static/: .gitignore  style.css
woodpecker/.config/: prometheus-podman-exporter
woodpecker/fedora-local/: Containerfile  container-build.sh  latex-cache.tex  package-install.sh
(+342 files in other folders)
