# Source Code for maxchernoff.ca
# https://github.com/gucci-on-fleek/maxchernoff.ca
# SPDX-License-Identifier: MPL-2.0+ OR CC-BY-SA-4.0+
# SPDX-FileCopyrightText: 2025 Max Chernoff

################
### Metadata ###
################

[project]
# Don't upload to PyPI.
classifiers = ["Private :: Do Not Upload"]
requires-python = "~= 3.14.0"


##############################
### Formatting and Linting ###
##############################

[tool.ruff]
# Shorter line lengths are more readable.
line-length = 80

# Automatically fix formatting and linting issues.
fix = true

# Enable experimental features.
preview = true

[tool.ruff.lint]

# Add the following lint rule categories to the default set.
extend-select = [
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "D", # pydocstyle
    "DOC", # pydoclint
    "I", # isort
    "ISC", # flake8-implicit-str-concat
    "NPY", # numpy
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "UP", # pyupgrade
]

# Ignore the following rules.
extend-ignore = [
    "ANN002", # missing type annotation for args
    "ANN003", # missing type annotation for kwargs
    "ANN401", # Dynamically typed expressions are disallowed
    "D105", # Missing docstring in magic method
    "D202", # No blank lines allowed after function docstring
    "DOC501", # Raised exception missing from docstring
    "F821", # undefined name
    "PLC0415", # import should be at the top-level of a file
    "PLR0912", # too many branches
    "PLW0603", # Using the global statement is discouraged
    "TRY004", # Prefer `TypeError` exception for invalid type
    "S110", # `try`-`except`-`pass` detected, consider logging the exception
    "BLE001", # Do not catch blind exception
    "ASYNC240", # Async functions should not use pathlib.Path methods
    "PLR2004", # Magic value used in comparison
    "B019", # Use of `functools.cache` on methods can lead to memory leaks
    "PYI025", # Use `from collections.abc import Set as AbstractSet`
]

unfixable = [
    # Don't fix unused imports, since it's really annoying to have them disappear
    # while you're trying to add them.
    "F401",
    # "Unused `noqa` directive"
    "RUF100",
]

# `pprint` is useful to have for debugging, so make sure that it's always
# present, even if unused.
[tool.ruff.lint.pyflakes]
allowed-unused-imports = ["pprint"]

[tool.ruff.lint.isort]
required-imports = ["from pprint import pp as pprint"]
lines-after-imports = 2
split-on-trailing-comma = false

# `typing_extensions` is effectively a standard library module.
extra-standard-library = ["typing_extensions"]

# Combine all imports from the same module into a single line.
combine-as-imports = true


#####################
### Type Checking ###
#####################

[tool.basedpyright]
# Make the Pyright type checker stricter.
typeCheckingMode = "recommended"
deprecateTypingAliases = true
reportUnnecessaryTypeIgnoreComment = true
enableTypeIgnoreComments = false

# But not _too_ strict.
reportAny = "information"
reportExplicitAny = "none"
reportInvalidCast = "information"
reportPrivateUsage = "information"
reportUnnecessaryComparison = "information"
reportUnnecessaryIsInstance = "information"
reportUnreachable = "hint"
reportUnusedCallResult = "hint"
reportUnusedImport = "information"
reportUnusedParameter = "information"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "information"
reportUnknownLambdaType = "none"
reportMissingTypeStubs = "information"
reportCallInDefaultInitializer = "information"


##############################
### Documentation Settings ###
##############################

# Docstring style.
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = true
